<resources>
    <string name="app_name">Simantan</string>
    <string name="txt_simantan_desc">Sistem Informasi Pemantauan\ndan Penertiban</string>
    <string name="txt_nip">NIP</string>
    <string name="txt_password">Password</string>
    <string name="et_nip_txt">Please input your NIP number...</string>
    <string name="et_password_txt">Please input your password...</string>
    <string name="txt_welcome">Welcome to</string>
    <string name="txt_simantan">SIMANTAN</string>
    <string name="txt_login">Login</string>
    <string name="login_footer_txt">\u00a9 Balai Monitor SFR Kelas I Jakarta 2022</string>
    <string name="image_view">Image View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_monitoring">Monitoring</string>
    <string name="txt_penertiban">Penertiban &amp; Penanganan\nGangguan</string>
    <string name="izin_kelas">Izin Kelas</string>
    <string name="txt_sims">Data SIMS</string>
    <string name="txt_penanganan_gangguan">Penanganan Gangguan</string>
    <string name="txt_penertiban_tindak_lanjut">Penertiban &amp; Tindak Lanjut</string>
    <string name="txt_2_ghz">2,4 Ghz</string>
    <string name="txt_5_ghz">5,8 Ghz</string>
    <string name="tv_digital">Tv Digital</string>
    <string name="tv_analog">Tv Analog</string>
    <string name="txt_tv_digital">Tv Digital</string>
    <string name="txt_tv_analog">Tv Analog</string>
    <string name="txt_radio_fm">Radio FM</string>
    <string name="txt_radio_am">Radio AM</string>
    <string name="txt_microwave_link">Microwave Link</string>
    <string name="txt_null">null</string>
    <string name="txt_id">id</string>
    <string name="txt_penyelenggara">Penyelenggara</string>
    <string name="txt_curr_lic_num">Curr Lic Num</string>
    <string name="txt_client_id">Client ID</string>
    <string name="txt_application_id">Application ID</string>
    <string name="txt_client_name">Client Name</string>
    <string name="txt_freq">freq</string>
    <string name="txt_freq_pair">Freq Pair</string>
    <string name="txt_bwidht">bwidht</string>
    <string name="txt_eq_mdl">EQ MDL</string>
    <string name="txt_stn_name">STN Name</string>
    <string name="txt_stn_addr">STN Address</string>
    <string name="txt_city">City</string>
    <string name="txt_district">District</string>
    <string name="txt_province">Province</string>
    <string name="txt_link_id">Link ID</string>
    <string name="txt_stasiun_lawan">Stasiun Lawan</string>
    <string name="txt_corr_address">Corr Address</string>
    <string name="txt_creation_date">Creation Date</string>
    <string name="txt_new_data">New Data</string>
    <string name="txt_perangkat_access_point_2_4_ghz">Perangkat Access Point 2,4 Ghz</string>
    <string name="txt_perangkat_access_point_5_8_ghz">Perangkat Access Point 5,8 Ghz</string>
    <string name="txt_tgl_observasi">Tgl Observasi</string>
    <string name="txt_nama_pengguna">Nama Pengguna</string>
    <string name="txt_frekuensi">Frekuensi</string>
    <string name="txt_subservice">Subservice</string>
    <string name="txt_dinas">Dinas</string>
    <string name="txt_jenis_pelanggaran">Jenis Pelanggaran</string>
    <string name="txt_kab_kota">Kab Kota</string>
    <string name="txt_tindakan">Tindakan</string>
    <string name="txt_status">Status</string>
    <string name="txt_tgl_operasi_stasiun">Tgl Operasi Stasiun</string>
    <string name="txt_no_isr">No ISR</string>
    <string name="txt_no_surat_penindakan">No Surat Penindakan</string>
    <string name="txt_tgl_penindakan">Tgl Penindakan</string>
    <string name="txt_no_surat_pengaduan">No Surat Pengaduan</string>
    <string name="txt_tgl_surat_pengaduan">Tgl Surat Pengaduan</string>
    <string name="txt_upt">UPT</string>
    <string name="txt_tgl_terima_surat_pengaduan">Tgl Terima Surat Pengaduan</string>
    <string name="txt_tgl_spt_pengukuran_karasteristik_frekuensi_radio">Tgl SPT Pengukuran Karasteristik Frekuensi Radio</string>
    <string name="txt_uraian_kasus">Uraian Kasus</string>
    <string name="txt_frekuensi_terganggu">Frekuensi Terganggu</string>
    <string name="txt_servis">servis</string>
    <string name="pihak_terganggu">Pihak Terganggu</string>
    <string name="txt_pihak_pengganggu">Pihak Pengganggu</string>
    <string name="txt_latitude_pengganggu">Latitude Pengganggu</string>
    <string name="txt_longitude_pengganggu">Longitude Pengganggu</string>
    <string name="txt_latitude_terganggu">Latitude Terganggu</string>
    <string name="txt_longitude_terganggu">Longitude Terganggu</string>
    <string name="txt_keterangan">Keterangan</string>
    <string name="txt_tanggal_selesai_aduan">tanggal_selesai_aduan</string>
    <string name="txt_tanggal">Tanggal</string>
    <string name="txt_alamat_lokasi_perangkat_pemancar">Alamat Lokasi Perangkat Pemancar</string>
    <string name="txt_koor_perangkat_latitude">Koor Perangkat Pemancar Latitude</string>
    <string name="txt_koor_perangkat_longitude">koor Perangkat Pemancar Longitude</string>
    <string name="txt_merk_perangkat">Merk Perangkat</string>
    <string name="txt_tipe_perangkat">Tipe Perangkat</string>
    <string name="txt_pic_nama">PIC Nama</string>
    <string name="txt_pic_no_tlp">PIC No Telp</string>
    <string name="txt_pic_email">PIC Email</string>
    <string name="txt_dashboard">Dashboard</string>
    <string name="txt_data_in_total">Data in total</string>
    <string name="_500">500</string>
    <string name="_400">400</string>
    <string name="_300">300</string>
    <string name="_200">200</string>
    <string name="_100">100</string>
    <string name="_0">0</string>
    <string name="txt_televisi">Televisi</string>
    <string name="txt_radio">Radio</string>
    <string name="txt_logo">logo</string>
    <string name="txt_alamat">Alamat</string>
    <string name="txt_no_spt">No SPT</string>
    <string name="txt_tanggal_pelaksanaan">Tanggal Pelaksanaan</string>
    <string name="txt_penyelenggara_layanan">Penyelenggara Layanan</string>
    <string name="txt_kanal">Kanal</string>
    <string name="txt_level">Level</string>
    <string name="txt_bandwidth">Bandwidth</string>
    <string name="txt_code_rate">Code Rate</string>
    <string name="txt_guard_interval">Guard Interval</string>
    <string name="txt_Program_penyelenggaraan_1">Program Penyelenggaraan 1</string>
    <string name="txt_Program_standar_1">Program Standar 1</string>
    <string name="txt_Program_penyelenggaraan_2">Program Penyelenggaraan 2</string>
    <string name="txt_Program_standar_2">Program Standar 2</string>
    <string name="txt_Program_penyelenggaraan_3">Program Penyelenggaraan 3</string>
    <string name="txt_Program_standar_3">Program Standar 3</string>
    <string name="txt_Program_penyelenggaraan_4">Program Penyelenggaraan 4</string>
    <string name="txt_Program_standar_4">Program Standar 4</string>
    <string name="txt_Program_penyelenggaraan_5">Program Penyelenggaraan 5</string>
    <string name="txt_Program_standar_5">Program Standar 5</string>
    <string name="txt_Program_penyelenggaraan_6">Program Penyelenggaraan 6</string>
    <string name="txt_Program_standar_6">Program Standar 6</string>
    <string name="txt_Program_penyelenggaraan_7">Program Penyelenggaraan 7</string>
    <string name="txt_Program_standar_7">Program Standar 7</string>
    <string name="txt_Program_penyelenggaraan_8">Program Penyelenggaraan 8</string>
    <string name="txt_Program_standar_8">Program Standar 8</string>
    <string name="txt_Program_penyelenggaraan_9">Program Penyelenggaraan 9</string>
    <string name="txt_Program_standar_9">Program Standar 9</string>
    <string name="txt_Program_penyelenggaraan_10">Program Penyelenggaraan 10</string>
    <string name="txt_Program_standar_10">Program Standar 10</string>
    <string name="txt_Program_penyelenggaraan_11">Program Penyelenggaraan 11</string>
    <string name="txt_Program_standar_11">Program Standar 11</string>
    <string name="txt_Program_penyelenggaraan_12">Program Penyelenggaraan 12</string>
    <string name="txt_Program_standar_12">Program Standar 12</string>
    <string name="txt_nama_stasiun_radio">Nama Stasiun Radio</string>
    <string name="txt_lokasi_pemancar">Lokasi Pemancar</string>
    <string name="txt_frekuensi_terukur_mhz">frekuensi_terukur_mhz</string>
    <string name="txt_lokasi_pemancar_kecamatan">Lokasi Pemancar Kecamatan</string>
    <string name="txt_provinsi">Provinsi</string>
    <string name="txt_tanggal_spt">Tanggal SPT</string>
    <string name="txt_kecamatan">Kecamatan</string>
    <string name="txt_latitude">Latitude</string>
    <string name="txt_longitude">Longitude</string>
    <string name="txt_metode">Metode</string>
    <string name="txt_no_risalah_hasil">No Risalah Hasil</string>
    <string name="txt_koor_long">Koor Long</string>
    <string name="txt_koor_lat">Koor Lat</string>
    <string name="txt_tx_mhz">Tx Mhz</string>
    <string name="txt_rx_mhz">Rx Mhz</string>
    <string name="txt_bw_mhz">Bw Mhz</string>
    <string name="txt_sertifikat">Sertifikat</string>
    <string name="no">No</string>
    <string name="txt_no">No</string>
    <string name="txt_frekuensi_pemancar_mhz">Frekuensi Pemancar Mhz</string>
    <string name="txt_tgl_selesai_aduan">Tgl Selesai Aduan</string>
</resources>