<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".DashboardActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/_50dp"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_20dp"
                android:contentDescription="@string/image_view"
                android:src="@drawable/ic_vector_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/txt_dashboard"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDataTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/card_bg"
                app:cardCornerRadius="@dimen/_15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDashboard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_card_dashboard"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_20dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10dp"
                                android:fontFamily="@font/inter_regular"
                                android:text="@string/_500"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10dp"
                                android:fontFamily="@font/inter_regular"
                                android:text="@string/_400"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10dp"
                                android:fontFamily="@font/inter_regular"
                                android:text="@string/_300"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10dp"
                                android:fontFamily="@font/inter_regular"
                                android:text="@string/_200"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10dp"
                                android:fontFamily="@font/inter_regular"
                                android:text="@string/_100"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10dp"
                                android:fontFamily="@font/inter_regular"
                                android:text="@string/_0"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="@dimen/_20dp"
                            android:layout_marginStart="@dimen/_10dp"
                            android:layout_marginEnd="@dimen/_20dp"
                            android:gravity="bottom">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="bottom"
                                android:orientation="horizontal"
                                android:paddingBottom="@dimen/_10dp"
                                tools:ignore="UselessParent">

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="25dp"
                                    android:layout_marginEnd="@dimen/_20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:contentDescription="@string/image_view" />

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="95dp"
                                    android:layout_marginEnd="@dimen/_20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:contentDescription="@string/image_view" />

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="125dp"
                                    android:layout_marginEnd="@dimen/_20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:contentDescription="@string/image_view" />

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="85dp"
                                    android:layout_marginEnd="@dimen/_20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:contentDescription="@string/image_view" />

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginEnd="@dimen/_20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:contentDescription="@string/image_view" />

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="125dp"
                                    android:layout_marginEnd="@dimen/_20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:contentDescription="@string/image_view" />

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="35dp"
                                    android:layout_marginEnd="@dimen/_20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:contentDescription="@string/image_view" />

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="75dp"
                                    android:layout_marginEnd="@dimen/_20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:contentDescription="@string/image_view" />

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginEnd="@dimen/_20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:contentDescription="@string/image_view" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/txt_data_in_total"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDataTelevisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/card_bg"
                app:cardCornerRadius="@dimen/_15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvDataTotal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_20dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/txt_televisi"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_18sp" />

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/gvTelevisi"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDataRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/card_bg"
                app:cardCornerRadius="@dimen/_15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvDataTelevisi">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_20dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/txt_radio"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_18sp" />

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/gvRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDataIzinKelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/card_bg"
                app:cardCornerRadius="@dimen/_15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvDataRadio">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_20dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/izin_kelas"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_18sp" />

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/gvIzinKelas"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>